python-web/service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-web-svc
  namespace: python-web
spec:
  type: LoadBalancer
  selector:
    app: python-web
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30007
